--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assignment || 2</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="bootstrap.css">
+  <title>Document</title>
 </head>
-<body class="bg-dark ">
-  <div class="container">
-    
-  </div>
-
-
-
+<body>
   <script src="index.js"></script>
-  <script src="bootstrap.bundle.js"></script>
 </body>
 </html>
